Add sorting to the applications list API endpoint (#161)
